# drm-lease-simple-client

./: .gitignore  main.c  meson.build
